<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#090909"
    tools:context=".CreateAccountPage">

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/email_address"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email_address"
        app:layout_constraintEnd_toEndOf="@+id/et_email_address"
        app:layout_constraintStart_toStartOf="@+id/et_email_address"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/et_email_address"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/et_email"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <TextView

        android:id="@+id/textView4"
        android:layout_width="340dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/create_password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="#FFFEFE"
        android:hint="@string/see_creteria_below"
        android:password="true"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        android:importantForAutofill="no"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="340dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:text="@string/repeat_password"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/repeatpassword"
        app:layout_constraintEnd_toEndOf="@+id/repeatpassword"
        app:layout_constraintStart_toStartOf="@+id/repeatpassword" />

    <EditText
        android:id="@+id/repeatpassword"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="#FBFBFB"
        android:importantForAutofill="no"
        android:password="true"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="340dp"
        android:layout_height="106dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="Your password should have a minimum of 8 \ncharacters and contain at least one number\none uppercase and one lower case letter\nYou can use special characters."
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="345dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gradient"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="336dp"
        android:layout_height="20dp"
        android:layout_marginTop="1dp"
        android:textColor="#F1EAEA"
        app:layout_constraintEnd_toEndOf="@+id/et_email_address"
        app:layout_constraintStart_toStartOf="@+id/et_email_address"
        app:layout_constraintTop_toBottomOf="@+id/et_email_address" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="339dp"
        android:layout_height="18dp"
        android:layout_marginTop="3dp"
        android:textColor="#F6F4F4"
        app:layout_constraintEnd_toEndOf="@+id/repeatpassword"
        app:layout_constraintStart_toStartOf="@+id/repeatpassword"
        app:layout_constraintTop_toBottomOf="@+id/repeatpassword" />


</androidx.constraintlayout.widget.ConstraintLayout>

